# INVESTING

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PROJECTED_REVENUES.ipynb  README.md  pr.py  pyproject.toml  requirements.txt
investingbot/: investing.py  main.py  settings.py
